cmake_minimum_required(VERSION 3.21)
project(siaod_2)

set(CMAKE_CXX_STANDARD 20)

add_executable(siaod_2 main.cpp FilesFirst.cpp FilesFirst.h FilesBin.cpp FilesBin.h HashTable.cpp HashTable.h ControlFileThroughTree.cpp ControlFileThroughTree.h HashTest.h Key.h BinarySearchTree.cpp BinarySearchTree.h AVL_tree.cpp AVL_tree.h Schedule.h Interface3.h AbstractStruct.h)
